# MPU6050-C-CPP-Library-for-Raspberry-Pi

./: CMakeLists.txt
